fix: project info spacing

--- a/src/shared/components/MyWorks/WorkItem/styles.module.css
+++ b/src/shared/components/MyWorks/WorkItem/styles.module.css
@@ -30,6 +30,7 @@
 .projectInfo{
     position: relative;
     padding: 1.25rem;
+    width: 50%;
 }
 
 .projectName h3{
